# ddX

./: .bumpversion.cfg  .gitignore  .meson-subproject-wrap-hash.txt  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  LICENSE-old.txt  MANIFEST.in  README.md  annotated.html  annotated_dup.js  cbessel_8f90_source.html  citelist.html  classes.html  ddXConfig.cmake.in  ddx_8f90.html  ddx_8f90.js  ddx_8f90_source.html  ddx_8h.html  ddx_8h.js  ddx_8h_source.html  ddx__cinterface_8f90_source.html  ddx__constants_8f90.html  ddx__constants_8f90.js  ddx__constants_8f90_source.html  ddx__core_8f90.html  ddx__core_8f90.js  ddx__core_8f90_source.html  ddx__cosmo_8f90.html  ddx__cosmo_8f90.js  ddx__cosmo_8f90_source.html  ddx__definitions_8f90.html  ddx__definitions_8f90.js  ddx__definitions_8f90_source.html  ddx__driver_8f90.html  ddx__driver_8f90_source.html  ddx__errors_8f90_source.html  ddx__gradients_8f90_source.html  ddx__harmonics_8f90.html  ddx__harmonics_8f90.js  (+165 more)
cmake/: ddXConfig.cmake  testddXinstall.cmake
config/: meson.build
dev/: annotated.html  annotated_dup.js  cbessel_8f90_source.html  citelist.html  classes.html  ddx_8f90.html  ddx_8f90.js  ddx_8f90_source.html  ddx__constants_8f90.html  ddx__constants_8f90.js  ddx__constants_8f90_source.html  ddx__core_8f90.html  ddx__core_8f90.js  ddx__core_8f90_source.html  ddx__cosmo_8f90.html  ddx__cosmo_8f90.js  ddx__cosmo_8f90_source.html  ddx__definitions_8f90.html  ddx__definitions_8f90.js  ddx__definitions_8f90_source.html  ddx__gradients_8f90_source.html  ddx__harmonics_8f90.html  ddx__harmonics_8f90.js  ddx__harmonics_8f90_source.html  ddx__lpb_8f90_source.html  ddx__lpb__core_8f90_source.html  ddx__mkrhs_8f90_source.html  ddx__operators_8f90.html  ddx__operators_8f90.js  ddx__operators_8f90_source.html  ddx__parameters_8f90.html  ddx__parameters_8f90.js  ddx__parameters_8f90_source.html  ddx__pcm_8f90.html  ddx__pcm_8f90.js  ddx__pcm_8f90_source.html  ddx__solvers_8f90.html  ddx__solvers_8f90.js  ddx__solvers_8f90_source.html  ddx__workspace_8f90.html  (+92 more)
docs/: CMakeLists.txt  Doxyfile  config.in  ddX_references.md  ddstory.md  download_and_install.md  index.md  licence.md  python_interface.md  references.bib  run.md  theory.md
examples/: CMakeLists.txt  run_ddx.c  run_ddx.py  run_ddx_low_level.c
html/: annotated_dup.js  cbessel_8f90_source.html  citelist.html  classes.html  ddx_8f90.html  ddx_8h_source.html  ddx__cinterface_8f90_source.html  ddx__constants_8f90.html  ddx__constants_8f90_source.html  ddx__core_8f90.js  ddx__cosmo_8f90.html  ddx__cosmo_8f90_source.html  ddx__definitions_8f90.html  ddx__definitions_8f90_source.html  ddx__driver_8f90.html  ddx__driver_8f90.js  ddx__harmonics_8f90.html  ddx__harmonics_8f90_source.html  ddx__lpb_8f90_source.html  ddx__lpb__core_8f90_source.html  ddx__mkrhs_8f90_source.html  ddx__multipolar__solutes_8f90_source.html  ddx__operators_8f90.html  ddx__operators_8f90_source.html  ddx__parameters_8f90.js  ddx__pcm_8f90.js  ddx__pcm_8f90_source.html  ddx__solvers_8f90.html  ddx__solvers_8f90_source.html  ddx__workspace_8f90.html  ddx__workspace_8f90_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_vars.html  index.html  interfaceddx__solvers_1_1matvec__interface-members.html  interfaceddx__solvers_1_1norm__interface.html  matrix__debug_8f90_source.html  menudata.js  (+44 more)
latex/: Makefile  annotated.tex  cbessel_8f90_source.tex  ddx_8f90.tex  ddx_8f90_source.tex  ddx_8h_source.tex  ddx__cinterface_8f90_source.tex  ddx__constants_8f90.tex  ddx__constants_8f90_source.tex  ddx__core_8f90.tex  ddx__core_8f90_source.tex  ddx__cosmo_8f90.tex  ddx__cosmo_8f90_source.tex  ddx__definitions_8f90.tex  ddx__definitions_8f90_source.tex  ddx__driver_8f90.tex  ddx__driver_8f90_source.tex  ddx__gradients_8f90_source.tex  ddx__harmonics_8f90.tex  ddx__harmonics_8f90_source.tex  ddx__lpb_8f90_source.tex  ddx__lpb__core_8f90_source.tex  ddx__mkrhs_8f90_source.tex  ddx__multipolar__solutes_8f90_source.tex  ddx__operators_8f90.tex  ddx__operators_8f90_source.tex  ddx__parameters_8f90.tex  ddx__parameters_8f90_source.tex  ddx__pcm_8f90.tex  ddx__pcm_8f90_source.tex  ddx__solvers_8f90.tex  ddx__solvers_8f90_source.tex  ddx__workspace_8f90.tex  ddx__workspace_8f90_source.tex  files.tex  interfaceddx__parameters_1_1print__func__interface.tex  interfaceddx__solvers_1_1matvec__interface.tex  interfaceddx__solvers_1_1matvec__interface__external.tex  llgnew_8f_source.tex  (+25 more)
src/: CMakeLists.txt  bessel.f90  cbessel.f90  ddx.f90  ddx.h  ddx_cinterface.f90  ddx_constants.f90  ddx_core.f90  ddx_cosmo.f90  ddx_definitions.f90  ddx_driver.f90  ddx_errors.f90  ddx_fmm.f90  ddx_gradients.f90  ddx_harmonics.f90  ddx_legacy.f90  ddx_lpb.f90  ddx_lpb_core.f90  ddx_mkrhs.f90  ddx_multipolar_solutes.f90  ddx_operators.f90  ddx_parameters.f90  ddx_pcm.f90  ddx_profiling.f90  ddx_properties.f90  ddx_rhs.f90  ddx_solvers.f90  ddx_solvers_old.f90  ddx_workspace.f90  define_sources.cmake  llgnew.f  logos-ascii.rtf  matrix_debug.f90  mod_profiling.f90  pcm_fmm.f90  pyddx.cpp  pyddx_classes.cpp  pyddx_data.cpp  test_gradients.py  test_lpb_limits.py  (+3 more)
tests/: CMakeLists.txt  Input-example.txt  Input.txt  Input_cosmo.txt  Input_ddLPB.txt  Input_ddlpb.txt  Input_force.txt  bessel.f90  ddlpb.f90  ddlpb_esolv.f90  ddlpb_matrices_combine.f90  ddx_core.f90  ddx_driver.f90  ddx_operators.f90  error.f90  force.f90  force_ddlpb.f90  m2l.f90  main_ddLPB.f90  matrix_adjoint.f90  matrix_derivatives.f90  matrix_solvers.f90  meson.build  multipolar_solutes.f90
tests/data/: ala25.txt  benzene.txt  caffeine.txt  crambin.txt  ddcosmo_force_fmm.in  ddcosmo_force_fmm.out  ddlpb_force.txt  ddpcm_force_fmm.in  ddpcm_force_fmm.out  formaldehyde.txt  run_tests.csh  taxol.txt
tests/standalone_tests/: CMakeLists.txt  cosmo.ref  cosmo.txt  cosmo_fmm.ref  cosmo_fmm.txt  cosmo_incore.ref  cosmo_incore.txt  ddx_driver_testing.f90  lpb.ref  lpb.txt  lpb_fmm.ref  lpb_fmm.txt  lpb_incore.ref  lpb_incore.txt  meson.build  meson_test_wrapper.in  pcm.ref  pcm.txt  pcm_fmm.ref  pcm_fmm.txt  pcm_incore.ref  pcm_incore.txt  run_test.py
(+193 files in other folders)
